objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Adress</description>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Commission with other organisation</description>
        <label>Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contact Email</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax Number</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Eastern Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile Number</description>
        <label>Mobile</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_request__c</fullName>
        <description>Number of request given to the organisation</description>
        <label>Number of request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Simpsons_CommissionCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Commission__c &lt;10</errorConditionFormula>
        <errorMessage>Commission cannot be less than 10%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Simpsons_LocationRequired</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(
ISPICKVAL( Location__c , &quot;Eastern Region&quot;),
ISPICKVAL( Location__c , &quot;Western Region&quot;), 
ISPICKVAL( Location__c , &quot;Northern Region&quot;),
ISPICKVAL( Location__c , &quot;Southern Region&quot;),
ISPICKVAL( Location__c , &quot;North Eastern Region&quot;),
ISPICKVAL( Location__c , &quot;Central Region&quot;)
))</errorConditionFormula>
        <errorMessage>Please select a value for the Location</errorMessage>
    </validationRules>
</CustomObject>